--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.2-Beta1
  	- Added Popup Album Art (Thx Di-Fosfor)
  	- Fixed Typo in Amazon Search debug statement
  	- Added sort_files.php.inc to /bin 
  	- Fixed Ratings designation mistake and added it to artist view
  	- Fixed location detection for contextual titls and browse
		on the simple menu's (Thx SoundOfEmotion)
  	- Fixed a botched change to the database (No Data loss!) but I 
		still feel stupid (Blame Vollmer)
  	- Fixed a problem where .flac files wouldn't get reconized by
		the regular expresison that pulls in files from m3u's
		(Thx nhorlock)
  	- Fixed a logic problem with the rating system where it would
		show a star for the 0 value when it should always show
		the 0 or don't play symbol
  	- Fixed drop-downs on sidebar not resizing with fontsize
		(Thx SoundOfEmotion)
  	- Fixed wrap-around text by removing float:left; on #content
		(Thx Sigger)

--------------------------------------------------------------------------
  v.3.3.2-Alpha4 12/27/2005 
  	- Fixed Registration system sort of. It still needs massive 
		improvement, but it works.. kinda (Thx SoundOfEmotion)
  	- Added Rating system, currently only non-flash works. 
		(Thx SoundOfEmotion for original code)
  	- Added pop-up sub-menus to classic Theme (Thx Sigger)
	- Fixed genre pull-down so it's a good bit faster (1/2 the sql calls)
  	- Updated Preferences (yet again) maybe it's better, maybe it's not
		we'll never know...
  	- Fixed Classic Theme view in IE (had spaces)
	- Fixed permission bug with guest users when batch download was
		enabled
  	- Added initial Italian translation (Thx Michele)
  	- Updated Burgundy theme to take advantage of div format so that 